Test/error/test-semi-1.cmm
int main()
{
    print(x)
    print(y);
}
